--- a/PizzaBox.Client/Views/Home/Index.cshtml
+++ b/PizzaBox.Client/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model PizzaBox.Client.Models.OrderMVC
+@model PizzaBox.Client.Models.OrderMVC
 <!DOCTYPE html>
 <html lang="en">
 
@@ -24,11 +24,12 @@
                         @foreach (var item in Model.Crusts)
                         {
                             <div class="form-check">
-                                <input class="form-check-input" type="radio" id="@item.Name" asp-for="SelectedCrust" value="@item.Name" />
+                                <input class="form-check-input" type="radio" id="@item.Name" asp-for="SelectedCrust"
+                                value="@item.Name" />
                                 <label class="form-check-label" for="@item.Name">@item.Name</label>
                             </div>
                         }
-                    @Html.ValidationMessageFor(m => m.SelectedCrust,null, new { @class = "text-danger" })
+                        @Html.ValidationMessageFor(m => m.SelectedCrust,null, new { @class = "text-danger" })
 
                     </div>
                 </div>
@@ -42,7 +43,8 @@
                         @foreach (var item in Model.Sizes)
                         {
                             <div class="form-check">
-                                <input class="form-check-input" type="radio" id="@item.Name" asp-for="SelectedSize" value="@item.Name" />
+                                <input class="form-check-input" type="radio" id="@item.Name" asp-for="SelectedSize"
+                                value="@item.Name" />
                                 <label class="form-check-label" for="@item.Name">@item.Name</label>
                             </div>
                         }
@@ -60,7 +62,8 @@
                         @foreach (var item in Model.Toppings)
                         {
                             <div class="form-check">
-                                <input class="form-check-input" type="checkbox" id="@item.Name" name="SelectedToppings" value="@item.Name" />
+                                <input class="form-check-input" type="checkbox" id="@item.Name" name="SelectedToppings"
+                                value="@item.Name" />
                                 <label class="form-check-label" for="@item.Name">@item.Name</label>
                             </div>
                         }
