--- a/PizzaBox.Client/Views/Shared/_Layout.cshtml
+++ b/PizzaBox.Client/Views/Shared/_Layout.cshtml
@@ -109,8 +109,8 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
-    <script>https://cdn.jsdelivr.net/npm/jquery-validation@1.19.3/dist/jquery.validate.min.js</script>
-    <script>https://cdn.jsdelivr.net/npm/jquery-validation-unobtrusive@3.2.12/dist/jquery.validate.unobtrusive.min.js</script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.3/dist/jquery.validate.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery-validation-unobtrusive@3.2.12/dist/jquery.validate.unobtrusive.min.js"></script>
 
 </body>
 
