add-table-in-order-view

--- a/PizzaBox.Client/Views/Order/Order.cshtml
+++ b/PizzaBox.Client/Views/Order/Order.cshtml
@@ -1,14 +1,39 @@
 ﻿@model PizzaBox.Domain.Models.Order
 <body>
-    @foreach (var pizza in Model.Pizzas)
-    {
-        @pizza.Crust.Name
-        @pizza.Size.Name
 
-        @foreach (var topping in pizza.Toppings)
-        {
-            @topping.Name
-        }
-    }
-    <a href="../home/index">OrderMore</a>
+
+    <table class="table table-dark">
+        <thead>
+            <tr>
+                <th scope="col">Pizza</th>
+                <th scope="col">Size</th>
+                <th scope="col">Crust</th>
+                <th scope="col">Toppings</th>
+                <th scope="col">Price</th>
+            </tr>
+        </thead>
+        <tbody>
+            @{int index = 1;}
+            @foreach (var pizza in Model.Pizzas)
+            {
+            <tr>
+                <th scope="row">@index</th>
+                <td>@pizza.Size.Name</td>
+                <td>@pizza.Crust.Name</td>
+                <td>
+                    @foreach (var topping in pizza.Toppings)
+                    {
+                    @topping.Name @Html.Raw(" ")
+                    }
+                    
+                </td>
+                <td>
+                    @pizza.Price
+                </td>
+                @{index++;}
+            </tr>
+            }
+            </tbody>
+    </table>
+    <a href="../home/index">Order More</a>
 </body>
