--- a/PizzaBox.Client/Views/Order/ThankYou.cshtml
+++ b/PizzaBox.Client/Views/Order/ThankYou.cshtml
@@ -5,7 +5,8 @@
 }
 
 <body>
-
-    <h1>Thank You</h1>
-    <h2>Order Will Be Ready in 15 minutes</h2>
+    <div class="container">
+        <h1 class="text-center">Thank You</h1>
+        <h2 class="text-center">Order Will Be Ready in 15 minutes</h2>
+        </div>
 </body>
