--- a/PizzaBox.Client/Views/_ViewImports.cshtml
+++ b/PizzaBox.Client/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using PizzaBox.Client
 @using PizzaBox.Client.Models
+@using PizzaBox.Domain.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
